# network-analysis

./: README.md  networkx.ipynb  pyproject.toml
input/: generate_graphs.py  ws_small.gml
lab10_winner_takes_all/: run_experiments.py
lab10_winner_takes_all/output/results/ws_inf1_0.1_inf2_0.1/: sir.csv
lab10_winner_takes_all/output/results/ws_inf1_0.1_inf2_0.2/: sir.csv
lab10_winner_takes_all/output/results/ws_inf1_0.2_inf2_0.1/: sir.csv
lab10_winner_takes_all/output/results/ws_inf1_0.2_inf2_0.2/: initial_seeded.gml  sir.csv
lab7_social_influence/: generate_graphs.py  run_experiments.py
lab7_social_influence/output/: ws.gml
lab7_social_influence/output/results/ws_seed_10_threshold_10/: counts.csv  initial_seeded.gml
lab7_social_influence/output/results/ws_seed_10_threshold_30/: counts.csv  initial_seeded.gml
lab7_social_influence/output/results/ws_seed_5_threshold_10/: counts.csv  initial_seeded.gml
lab7_social_influence/output/results/ws_seed_5_threshold_30/: counts.csv  initial_seeded.gml
lab7_social_influence/output/results/ws_small_seed_10_threshold_10/: counts.csv  initial_seeded.gml
lab7_social_influence/output/results/ws_small_seed_10_threshold_30/: counts.csv  initial_seeded.gml
lab7_social_influence/output/results/ws_small_seed_5_threshold_10/: counts.csv  initial_seeded.gml
lab7_social_influence/output/results/ws_small_seed_5_threshold_30/: counts.csv  initial_seeded.gml
lab8_diffusion/: run_experiments.py
lab8_diffusion/output/results/ws_b_0.01_m_0.05/: sir.csv
lab9_diffusion_availability/: run_experiments.py
(+11 files in other folders)
