[tool.poetry]
name = "network-analysis"
version = "0.1.0"
description = ""
authors = ["Jakub Młokosiewicz"]

[tool.poetry.dependencies]
python = "^3.9"
networkx = "^2.5.1"
matplotlib = "^3.4.2"

[tool.poetry.dev-dependencies]
ipykernel = "^6.0.1"
ipympl = "^0.7.0"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.autopep8]
max_line_length = 120
